fixed padding on hero section being too large for mobile users

--- a/src/assets/scss/core/sections/_hero.scss
+++ b/src/assets/scss/core/sections/_hero.scss
@@ -28,6 +28,19 @@
 	}
 }
 
+
+.hero-content{
+	padding-left:32px;
+	padding-right:32px;
+}
+
+@include media( '<medium' ) {	
+	.hero-content{
+		padding-left:0px;
+		padding-right:0px;
+	}
+}
+
 @include media( '<=medium' ) {
 
 	.hero {
